--- a/googletest/my_project/CMakeLists.txt
+++ b/googletest/my_project/CMakeLists.txt
@@ -1,3 +1,6 @@
+########################################################
+# Declaration of dependency on googletest.
+########################################################
 cmake_minimum_required(VERSION 3.14)
 project(my_project)
 
@@ -5,6 +8,7 @@ project(my_project)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Specify that googletest be downloaded from github.com, at a specific commit hash.
 include(FetchContent)
 FetchContent_Declare(
   googletest
@@ -13,7 +17,13 @@ FetchContent_Declare(
 # For Windows: Prevent overriding the parent project's compiler/linker settings
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
+########################################################
+# End declaration of dependency on googletest.
+########################################################
 
+########################################################
+# Config for creating, running a googletest binary.
+########################################################
 enable_testing()
 
 add_executable(
@@ -27,4 +37,7 @@ target_link_libraries(
 
 include(GoogleTest)
 gtest_discover_tests(hello_test)
+########################################################
+# End config for creating, running a googletest binary.
+########################################################
 
